hphp/test/zend/good/zend/zend_operators.php
<?php /* $Id$ */

var_dump((object)1 instanceof stdClass);
var_dump(! (object)1 instanceof Exception);

?>