hphp/test/zend/bad/Zend/tests/exception_003.php
<?php 

throw new Exception(1);

?>